// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute Bitcoin list protocol should return success 1`] = `
{
  "data": {
    "decimals": 8,
    "result": "75100045155",
    "statusCode": 200,
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "{"data":{"protocol":"list","indexer":"por_indexer","addresses":[{"address":"39e7mxbeNmRRnjfy1qkphv1TiMcztZ8VuE","chainId":"mainnet","network":"bitcoin"},{"address":"35ULMyVnFoYaPaMxwHTRmaGdABpAThM4QR","chainId":"mainnet","network":"bitcoin"}]}}",
  },
  "result": "75100045155",
  "statusCode": 200,
}
`;

exports[`execute Ethereum list protocol should return success 1`] = `
{
  "data": {
    "result": "220646158354962165",
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "{"data":{"indexer":"eth_balance","protocol":"list","addresses":["0x8288C280F35FB8809305906C79BD075962079DD8","0x81910675DbaF69deE0fD77570BFD07f8E436386A"],"confirmations":5}}",
  },
  "providerStatusCode": 200,
  "result": "220646158354962165",
  "statusCode": 200,
}
`;

exports[`execute Filecoin Gemini protocol should return success 1`] = `
{
  "data": {
    "decimals": 0,
    "result": "127530375584000000000000",
    "statusCode": 200,
  },
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "{"data":{"indexer":"lotus","protocol":"gemini"}}",
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;

exports[`execute Filecoin list protocol w/ miner format address should return success 1`] = `
{
  "data": {
    "decimals": 0,
    "result": "127530375584000000000000",
    "statusCode": 200,
  },
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "{"data":{"indexer":"lotus","protocol":"list","addresses":["f01850382"],"confirmations":5}}",
  },
  "result": "127530375584000000000000",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint should return success 1`] = `
{
  "data": {
    "decimals": 18,
    "details": "{"result":"75100045155","statusCode":200,"decimals":8},{"result":"220646158354962165"}",
    "result": "751221097708354962165",
    "statusCode": 200,
    "timestamps": {
      "providerDataReceivedUnixMs": 1641035471111,
      "providerDataRequestedUnixMs": 1641035471111,
    },
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "4373661546c6c02669a21dbb9ef45f8d",
  },
  "result": "751221097708354962165",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint view-function-multi-chain should fail 1`] = `
{
  "error": {
    "feedID": "054baf47a9ff27c8384416a3ce83c17c",
    "message": "Missing decimals: neither input.data.decimals nor viewFunctionIndexerResultDecimals provided",
    "name": "Error",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute multiReserves endpoint view-function-multi-chain should return success - decimals value 1`] = `
{
  "data": {
    "decimals": 18,
    "result": "184467440737095516150000000000",
    "statusCode": 200,
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "8e98c70d6aa1c3d531117aa6248da90c",
  },
  "result": "184467440737095516150000000000",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint view-function-multi-chain should return success 1`] = `
{
  "data": {
    "decimals": 18,
    "result": "18446744073709551615000000000000",
    "statusCode": 200,
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "b72450de15014c189039d10128a44bd9",
  },
  "result": "18446744073709551615000000000000",
  "statusCode": 200,
}
`;

exports[`execute multiReserves endpoint with scaling should return success 1`] = `
{
  "data": {
    "decimals": 2,
    "details": "{"result":"75100045155","statusCode":200,"decimals":8},{"result":"220646158354962165"}",
    "result": "75122",
    "statusCode": 200,
    "timestamps": {
      "providerDataReceivedUnixMs": 1641035471111,
      "providerDataRequestedUnixMs": 1641035471111,
    },
  },
  "jobRunID": "1",
  "meta": {
    "adapterName": "PROOF_OF_RESERVES",
  },
  "metricsMeta": {
    "feedId": "162d4acd10c6ee1c11c35c5e2657db66",
  },
  "result": "75122",
  "statusCode": 200,
}
`;
